# simkit

./: .gitignore  .polyscope.ini  Makefile  README.md  imgui.ini  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: Makefile  conf.py  index.rst  installation.md  make.bat  tutorials.md  usage.md
examples/: README.md  run_elastics_reduced.py
examples/fast_complementary_dynamics/: README.md  left_right_control.py
examples/force_dual_modes/: AdaptiveClickFEMSim.py  AdaptiveElasticFEMSim.py  actuated_gripper_sim.py  arm_snh.py  baby_dragon.py  chicken_wing.py  elephant_lodal_vs_modal.py  force_dual_modes.py  ghost_substructuring.py  gmm_force_expansion.py  interactive_app.py  pca_convergence.py  pca_convergence_reconstruction.py  pca_convergence_timing.py  pegasus_click.py  rotation_strain_coordinate_app.py  teddy_contact_switch_subspace.py  umfpack_lu_solve.py  vis_arm_fast_forward.py  vis_subspaces.py
examples/interactive_demos/: 001_deformation_gradient_demo.py  002_energy_demo.py  003_resolution_complexity.py  004_solver_tradeoff.py  005_integration_scheme.py  006_interactive_deformation.py  007_interactive_dynamics.py  008_interactive_contact_ball.py  009_interactive_contact_plane.py  010_interactive_contact_plane_3D.py  011_lbs_subspace_contact_plane_3D.py  012_interactive_mixed_fem.py  013_fast_complementary_dynamics.py  014_modal_muscles.py  015_interactive_mixed_fem_3D.py  README.md  utils.py
examples/modal_muscles/: README.md  actuators_a_la_mode_2D.py  animation_viewers.py  demo_actuation.py  modal_muscle_flat.py
examples/subspace_mfem/: README.md  config.py  convergence_fem_vs_mfem.py  drop_fem_vs_mfem.py  interactive_mfem.py  mfem_linesearch_debug.py  run_elastics_reduced.py  slingshot_fem_vs_mfem.py  utils.py  visualize_data.py
examples/tutorials/: 001_deformation_gradient_demo.py  002_energy_demo.py  003_resolution_complexity.py  004_solver_tradeoff.py  005_integration_scheme.py  006_interactive_deformation.py  007_interactive_dynamics.py  008_interactive_contact_ball.py  009_interactive_contact_plane.py  010_interactive_contact_plane_3D.py  01_deformation_gradient_construction.ipynb  02_deformation_gradient_intuition.ipynb  06_line_search.ipynb  07_time_integration.ipynb  README.md  _build_all.py  utils.py
scripts/: COMMANDS.md  derive_stable_neo_hookean.py  derive_stvk_and_neo_hookean.py  release.sh
simkit/: __init__.py  area_normals.py  average_onto_simplex.py  backtracking_line_search.py  backward_euler_rollout_matrix.py  biharmonic_coordinates.py  boundary_edges.py  closed_polyline.py  closest_point_map.py  cluster_grouping_matrices.py  clustered_plastic_stretch_tensor.py  combine_meshes.py  common_selections.py  deformation_gradient.py  deformation_gradient_p2.py  deformation_jacobian.py  deformation_jacobian_p2.py  density_ratio.py  diffuse_field.py  diffuse_scalar.py  dihedral_angles.py  dihedral_angles_2d.py  dihedral_angles_3d.py  dihedral_wedge_height.py  dihedral_wedge_map.py  dihedral_wedges.py  dirichlet_laplacian.py  dirichlet_penalty.py  drag_force.py  edge_difference_matrix.py  edge_displacement_jacobian.py  edge_face_adjacency.py  edge_gradient.py  edge_laplacian.py  edge_length_jacobian.py  edge_lengths.py  edges.py  eigs.py  eigs_iccm.py  equality_matrix.py  (+78 more)
simkit/blender/: SkinningWeightsViewerBlender.py  __init__.py  colorMap.py  drawEdgeSubset_colored.py  faceScalarToUV_unnormalized.py  readNumpyPoints.py  render_anim_modes.py  render_animation.py  render_cubature_points.py  render_edges_on_transparent_mesh_animation.py  render_face_labels.py  render_mesh.py  render_scene_animation.py  render_skinning_weights.py  render_spring_ik_animation.py  render_texture.py  render_vector_field_on_mesh.py  render_vertex_scalars.py  render_vertex_vectors.py  save_gltf.py  setMeshScalars.py  vertexScalarToUV_unnormalized.py
simkit/energies/: __init__.py  arap.py  arap_energy.py  arap_gradient.py  barrier_energies.py  bending_energy.py  contact_springs_plane.py  contact_springs_plane_energy.py  contact_springs_plane_gradient.py  contact_springs_plane_hessian.py  contact_springs_sphere.py  discrete_shells_bending.py  elastic.py  elastic_energy.py  elastic_gradient.py  elastic_hessian.py  emu.py  emu_gradient.py  fcr.py  fcr_energy.py  fcr_gradient.py  fcr_hessian.py  kinetic.py  linear_elasticity.py  linear_elasticity_energy.py  linear_elasticity_gradient.py  linear_elasticity_hessian.py  macklin_mueller_neo_hookean.py  mass_springs.py  membrane_neo_hookean.py  neo_hookean.py  neo_hookean_energy.py  neo_hookean_gradient.py  neo_hookean_hessian.py  quadratic.py  quadratic_dynamic_friction_energy.py  quadratic_dynamic_friction_hessian.py  stable_neo_hookean.py  stvk.py
simkit/filesystem/: __init__.py  compute_with_cache_check.py  mp4_to_gif.py  video_from_image_dir.py
simkit/integrators/: __init__.py  backward_euler.py  bdf2.py  forward_euler.py
simkit/matplotlib/: Frame.py  PointCloud.py  TriangleMesh.py  VectorField.py  __init__.py
tests/: conftest.py  test_arap.py  test_area_normals.py  test_average_onto_simplex.py  test_backtracking_line_search.py  test_backward_euler_rollout_matrix.py  test_barrier_energies.py  test_bending_energy.py  test_bending_unified_equivalence.py  test_biharmonic_coordinates.py  test_closed_polyline.py  test_cluster_grouping_matrices.py  test_clustered_plastic_stretch_tensor.py  test_combine_meshes.py  test_common_selections.py  test_contact_springs_plane.py  test_contact_springs_sphere.py  test_deformation_gradient.py  test_deformation_jacobian.py  test_deformation_jacobian_p2.py  test_density_ratio.py  test_diffuse_field.py  test_dihedral_angles.py  test_dihedral_angles_2d.py  test_dihedral_wedge_height.py  test_dihedral_wedge_map.py  test_dihedral_wedges.py  test_dirichlet_laplacian.py  test_dirichlet_penalty.py  test_discrete_shells_bending.py  test_displacement_u_tier.py  test_drag_force.py  test_edge_displacement_jacobian.py  test_edge_face_adjacency.py  test_edge_gradient.py  test_edge_laplacian.py  test_edge_length_jacobian.py  test_edge_lengths.py  test_edges.py  test_eigs.py  (+84 more)
(+55 files in other folders)
