[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simkit"
version = "0.1.2"
description = "SimKit: A Simulation Toolkit For Computer Animation"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Otman Benchekroun", email = "otmanbench@gmail.com"}
]
maintainers = [
    {name = "Otman Benchekroun", email = "otmanbench@gmail.com"}
]
keywords = ["simulation", "animation", "physics", "computer-graphics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
]
requires-python = ">=3.10"
# Hard requirements only. Heavier or specialized dependencies are exposed as
# named extras below so casual installs stay lean.
dependencies = [
    "numpy",
    "scipy",
]

[project.optional-dependencies]
# 2D Triangle-based meshing (simkit.shape_outlines). Most mesh/geometry ops
# (mass matrix, volume, deformation jacobian, ...) are native numpy/scipy.
mesh = ["libigl"]
# Plotting / interactive visualization.
viz = ["matplotlib", "polyscope==2.5.0"]
# Sparse eigensolvers (cvxopt provides UMFPACK bindings used by simkit.eigs).
solvers = ["cvxopt"]
# Image/video frame helpers in simkit.filesystem.
video = ["pillow"]
# CMA-ES solver (simkit.solvers.CMAESSolver).
cmaes = ["cma"]
# Everything end-user-facing.
all = [
    "libigl",
    "matplotlib",
    "polyscope==2.5.0",
    "cvxopt",
    "pillow",
    "cma"
]
# Development tooling.
dev = [
    "pytest>=7",
    "pytest-cov",
]
# Documentation tooling. myst-nb supersedes myst-parser (it renders both
# Markdown and Jupyter notebooks), so it's the only MyST dep we need.
docs = [
    "sphinx>=7",
    "sphinx-autoapi>=3",
    "pydata-sphinx-theme>=0.15",
    "sphinx-design>=0.5",
    "myst-nb>=1",
]

[project.urls]
Homepage = "https://github.com/otmanon/simkit"
Repository = "https://github.com/otmanon/simkit"
Documentation = "https://otmanon.github.io/simkit/"
Issues = "https://github.com/otmanon/simkit/issues"

[tool.setuptools]
license-files = ["LICENSE.MIT"]

[tool.setuptools.packages.find]
where = ["."]
include = ["simkit*"]

[tool.setuptools.package-data]
simkit = ["*.py", "**/*.py"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-ra"
markers = [
    "solvers: needs cvxopt (pip install simkit[solvers])",
    "mesh: needs libigl (pip install simkit[mesh])",
    "viz: needs polyscope/matplotlib (pip install simkit[viz])",
]
